force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Balance_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Balance_Required__c</fullName>
    <description>This field is automatically calculated via formula. This field stores the annual dollar amount of the minimum required balance.</description>
    <formula>LLC_BI__Fee_Including_Discounts__c / (LLC_BI__Scenario__r.LLC_BI__Earnings_Credit_Allowance__c / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>