force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Competitor_Balance_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Competitor_Balance_Required__c</fullName>
    <description>This field is populated automatically via formula. It stores the value of the competitor&apos;s minimum required balance for a bill point.</description>
    <formula>(LLC_BI__Competitor_Price__c *  LLC_BI__Volumes__c) / ( LLC_BI__Scenario__r.LLC_BI__Competitor_Earnings_Credit_Allowance__c / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Balance Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>