force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Competitor_Difference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Competitor_Difference__c</fullName>
    <description>This field is populated automatically via formula. It stores the difference between your fee cost and a competitor&apos;s for a bill point.</description>
    <formula>LLC_BI__Competitor_Fee__c -  LLC_BI__Fee_Including_Discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>