force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Competitor_Fee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Competitor_Fee__c</fullName>
    <description>This field is populated automatically via formula. It stores the competitor&apos;s fee for the number of volumes in the proforma for a bill point.</description>
    <formula>LLC_BI__Competitor_Price__c *  LLC_BI__Volumes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>