force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Exception_Price__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exception_Price__c</fullName>
    <description>This field is optional. It is populated manually in the proforma. It stores the value of an exception price for a bill point.</description>
    <label>Exception Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>