force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Fee_Including_Discounts__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fee_Including_Discounts__c</fullName>
    <description>This field is populated automatically via formula. This field contains the total fee amount for a single bill point including discounts.</description>
    <formula>IF((LLC_BI__Exception_Price__c &gt;= 0),

IF((LLC_BI__Scenario__r.LLC_BI__Total_Discount__c &gt; 0),
(LLC_BI__Volumes__c * (LLC_BI__Exception_Price__c - (LLC_BI__Exception_Price__c *LLC_BI__Scenario__r.LLC_BI__Total_Discount__c))),
(LLC_BI__Volumes__c * LLC_BI__Exception_Price__c)),

IF((LLC_BI__Scenario__r.LLC_BI__Total_Discount__c &gt; 0),
(LLC_BI__Volumes__c * (LLC_BI__Standard_Price__c - (LLC_BI__Standard_Price__c * LLC_BI__Scenario__r.LLC_BI__Total_Discount__c))),
(LLC_BI__Volumes__c * LLC_BI__Standard_Price__c )))</formula>
    <label>Fee Including Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>