force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Fixed_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fixed_Cost_Total__c</fullName>
    <description>This field is optional. It is automatically calculated via formula. It stores the total fixed unit cost value by volume number for a bill point.</description>
    <formula>IF(LLC_BI__Volumes__c &gt;0, LLC_BI__Volumes__c * LLC_BI__Bill_Point__r.LLC_BI__Fixed_Unit_Cost__c, 0)</formula>
    <label>Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>