force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Gross_Fee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Gross_Fee__c</fullName>
    <description>This field is populated automatically via formula. This field contains the value of the gross fees associated with this single product bill point.</description>
    <formula>LLC_BI__Standard_Price__c *  LLC_BI__Volumes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>