force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Is_Monthly__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not required. It is manually populated. Currently, this field is a data point which stores whether the scenario item is for a monthly recurring fee.</description>
    <label>Is Monthly</label>
    <type>Checkbox</type>
</CustomField>