force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Is_Perm_Waive__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Perm_Waive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not required. It is manually populated. Currently, this field is a data point which indicates whether the scenario item is for a permanently waived fee.</description>
    <label>Is Perm Waive</label>
    <type>Checkbox</type>
</CustomField>