force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Is_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Product_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set automatically via a trigger when the proforma is created. It checks if the associated bill point is associated to a product type.</description>
    <label>Is Product Type</label>
    <type>Checkbox</type>
</CustomField>