force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Margin_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Margin_After_Discount__c</fullName>
    <description>This field is automatically calculated via formula. It stores the margin of cost after discounts.</description>
    <formula>LLC_BI__Fee_Including_Discounts__c -  LLC_BI__Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>