force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Minimum_Required_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum_Required_Balance__c</fullName>
    <description>This field is populated automatically via formula. This field stores the minimum dollar amount that a customer must have in an account for this service based on the earnings credit allowance.</description>
    <formula>IF((LLC_BI__Scenario__r.LLC_BI__Earnings_Credit_Allowance__c &gt; 0),(LLC_BI__Fee_Including_Discounts__c/LLC_BI__Scenario__r.LLC_BI__Earnings_Credit_Allowance__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Required Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>