force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Scenario__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Scenario__c</fullName>
    <description>Contains bill point for the product, volume, pricing and calculations.</description>
    <label>Scenario</label>
    <referenceTo>LLC_BI__Scenario__c</referenceTo>
    <relationshipLabel>Scenario Items</relationshipLabel>
    <relationshipName>Scenario_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>