force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Unit_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field is populated automatically via a trigger when the proforma is created. It looks up to the bill point and pulls the unit price.</description>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>