force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Waived__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the bill point should be waived for the client.</description>
    <label>Waived</label>
    <type>Checkbox</type>
</CustomField>